tests/baselines/reference/arrayLiteralTypeInference.errors.txt
tests/cases/compiler/arrayLiteralTypeInference.ts(14,14): error TS2322: Type '({ id: number; trueness: boolean; } | { id: number; name: string; })[]' is not assignable to type 'Action[]'.
  Type '{ id: number; trueness: boolean; } | { id: number; name: string; }' is not assignable to type 'Action'.
    Type '{ id: number; trueness: boolean; }' is not assignable to type 'Action'.
      Object literal may only specify known properties, and 'trueness' does not exist in type 'Action'.
tests/cases/compiler/arrayLiteralTypeInference.ts(31,18): error TS2322: Type '({ id: number; trueness: boolean; } | { id: number; name: string; })[]' is not assignable to type '{ id: number; }[]'.
  Type '{ id: number; trueness: boolean; } | { id: number; name: string; }' is not assignable to type '{ id: number; }'.
    Type '{ id: number; trueness: boolean; }' is not assignable to type '{ id: number; }'.
      Object literal may only specify known properties, and 'trueness' does not exist in type '{ id: number; }'.


==== tests/cases/compiler/arrayLiteralTypeInference.ts (2 errors) ====
    class Action {
        id: number;
    }
    
    class ActionA extends Action {
        value: string;
    }
    
    class ActionB extends Action {
        trueNess: boolean;
    }
    
    var x1: Action[] = [
        { id: 2, trueness: false },
                 ~~~~~~~~~~~~~~~
!!! error TS2322: Type '({ id: number; trueness: boolean; } | { id: number; name: string; })[]' is not assignable to type 'Action[]'.
!!! error TS2322:   Type '{ id: number; trueness: boolean; } | { id: number; name: string; }' is not assignable to type 'Action'.
!!! error TS2322:     Type '{ id: number; trueness: boolean; }' is not assignable to type 'Action'.
!!! error TS2322:       Object literal may only specify known properties, and 'trueness' does not exist in type 'Action'.
        { id: 3, name: "three" }
    ]
    
    var x2: Action[] = [
        new ActionA(),
        new ActionB()
    ]
    
    var x3: Action[] = [
        new Action(),
        new ActionA(),
        new ActionB()
    ]
    
    var z1: { id: number }[] =
        [
            { id: 2, trueness: false },
                     ~~~~~~~~~~~~~~~
!!! error TS2322: Type '({ id: number; trueness: boolean; } | { id: number; name: string; })[]' is not assignable to type '{ id: number; }[]'.
!!! error TS2322:   Type '{ id: number; trueness: boolean; } | { id: number; name: string; }' is not assignable to type '{ id: number; }'.
!!! error TS2322:     Type '{ id: number; trueness: boolean; }' is not assignable to type '{ id: number; }'.
!!! error TS2322:       Object literal may only specify known properties, and 'trueness' does not exist in type '{ id: number; }'.
            { id: 3, name: "three" }
        ]
    
    var z2: { id: number }[] =
        [
            new ActionA(),
            new ActionB()
        ]
    
    var z3: { id: number }[] =
        [
            new Action(),
            new ActionA(),
            new ActionB()
        ]
    
    
    
    
    